--- a/src/app/shoe/shoe.component.css
+++ b/src/app/shoe/shoe.component.css
@@ -12,7 +12,7 @@
 }
 
 .title{
-    width: 100%;
+    width: 90%;
     text-align: start;
     margin-top: 2%;
     margin-left: 4%;
@@ -34,6 +34,7 @@
     display: flex;
     justify-content: center;
     margin-left: 2%;
+    flex-wrap: wrap;
 }
 
 .shoe-card{
